--- a/demo/index.html
+++ b/demo/index.html
@@ -20,8 +20,8 @@
       <h3>Basic sd-radio demo</h3>
       <demo-snippet>
         <template>
-          <player-radio img="http://www.971radio.com/envivo/97-1-foto_envivo.jpg" show-image="false">
-            Los Número Uno 97.1
+          <player-radio img="" show-image="false">
+            Radio
           </player-radio>
         </template>
       </demo-snippet>
