--- a/player-radio.html
+++ b/player-radio.html
@@ -71,7 +71,7 @@
       properties: {
         src: {
           type: String,
-          value: 'http://192.99.6.50:9980/;stream.nsv&type=mp3',
+          value: '',
         },
         autoplay: {
           type: Boolean,
